# dentista-v1

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: api-contracts-future.md  backups-and-restore.md  clinical-data-privacy.md  commercial-audit-2026-06-25.md  commercial-readiness.md  dv1-bridge-architecture.md  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial_schema.sql  0002_reporting_payment_files_alerts.sql  0003_report_export_paths.sql  0004_production_hardening.sql  0005_trial_license.sql  0006_local_hardening.sql  0007_local_sync_foundation.sql  0008_commercial_permission_hardening.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/backups/: backup_encryption.rs  mod.rs
src-tauri/src/commands/: appointments.rs  auth.rs  backups.rs  clinical.rs  dashboard.rs  license.rs  mod.rs  odontogram.rs  office.rs  patients.rs  reports.rs  sync.rs
src-tauri/src/database/: mod.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/files/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/reports/: mod.rs
src-tauri/src/repositories/: mod.rs
src-tauri/src/security/: mod.rs
src-tauri/src/services/: appointment_service.rs  audit_service.rs  auth_service.rs  backup_service.rs  clinical_service.rs  dashboard_service.rs  guard.rs  hardening_tests.rs  license_service.rs  mod.rs  odontogram_service.rs  office_service.rs  patient_service.rs  sync_service.rs
src-tauri/src/utils/: mod.rs
(+57 files in other folders)
