[package]
name = "dentalcare-manager"
version = "0.1.0"
description = "DentalCare Manager desktop application"
authors = ["DentalCare Manager"]
edition = "2021"

[lib]
name = "dentalcare_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dentalcare-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
log = "0.4"
rand = "0.8"
sanitize-filename = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "migrate"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
zip = "6"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
